--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>free brawl stars gems</title>
 </head>
 <body>
-<p>https://pjc2.github.io/free_gems/</p>
+<a href="https://pjc2.github.io/free_gems/">
 </body>
 </html>
